<resources>
    <string name="app_name">MultiPOS</string>
    <string name="client_management"><u>Client management</u></string>
    <string name="dash">...................................................................................................................................................................................................................................................................................................</string>
    <string name="login_details">Login details</string>
    <string name="founder_login">Founder login</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="founder_password">Founder password</string>
    <string name="system_accounts">Accounts</string>
    <string name="pos_id">Pos ID</string>
    <string name="alias">Company</string>
    <string name="enter_pos_alias">Enter Company name</string>
    <string name="address">Address</string>
    <string name="enter_pos_address">Enter Company Address</string>
    <string name="enter_pos_password">Enter password</string>
    <string name="admin_password">Admin password</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_password">Re-enter password</string>
    <string name="revert">Revert</string>
    <string name="next">Next</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="products_creation_mode">Products Creation Mode</string>
    <string name="pos_details_description">Some details about POS system</string>
    <string name="account_description">Some details about money</string>
    <string name="payment_type_description">Some details about payment types</string>
    <string name="currency_description">Adding and change main currency</string>
    <string name="units_description">Units which used in system</string>
    <string name="employers_description">Who will work with this POS</string>
    <string name="registration_details">Registration details</string>
    <string name="organization_details">Organization details</string>
    <string name="organization_name">Organization name</string>
    <string name="email_with_star">Email*</string>
    <string name="organization_address">Organization Address</string>
    <string name="zip_code">Zip code</string>
    <string name="contacts">Contacts</string>
    <string name="enter_phone_number">Enter phone number or e-mail</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="founder_login_details">Founder Login details</string>
    <string name="login_with_start">Login*</string>
    <string name="password_with_star">Password*</string>
    <string name="confirm_password_with_star">Confirm password*</string>
    <string name="mandatory_fields">* - mandatory fields</string>
    <string name="back">Back</string>
    <string name="access_token">Access token*</string>
    <string name="confirm">Confirm</string>
    <string name="enter_code_access_code">Enter code access code</string>
    <string name="enter_zip_code">Enter zip code</string>
    <string name="enter_organization_email">Enter organization mail</string>
    <string name="email_">Email:</string>
    <string name="zip_code_">Zip Code</string>
    <string-array name="start_configuration_title">
        <item>POS data</item>
        <item>Account</item>
        <item>Currency</item>
        <item>Payment type name</item>
        <item>Units</item>
    </string-array>
    <string-array name="start_configuration_description">
        <item>POS data</item>
        <item>Account</item>
        <item>Currency</item>
        <item>Payment type name</item>
        <item>Units</item>
    </string-array>
    <string-array name="products_menu_title">
        <item>Products</item>
        <item>Vendors Add&amp;Edit</item>
        <item>Classes</item>
        <item>Discounts</item>
        <item>Service Fee</item>
        <item>Export</item>
        <item>Import</item>
    </string-array>
    <string-array name="products_menu_description">
        <item>Add and edit products</item>
        <item>Add or edit vendors</item>
        <item>Add or edit classes</item>
        <item>Add or edit discounts</item>
        <item>Add or edit service fees</item>
        <item>Export price list, products, vendors</item>
        <item>Import products, vendors</item>
    </string-array>
    <string-array name="customers_menu_title">
        <item>Customers</item>
        <item>Customer Groups</item>
        <item>Debtors</item>
        <item>Export</item>
        <item>Import</item>
    </string-array>
    <string-array name="customers_menu_description">
        <item>Add and edit customers</item>
        <item>Add and edit customers groups</item>
        <item>List of Debtors</item>
        <item>Export customers, customer groups</item>
        <item>Import customers, customer groups</item>
    </string-array>
    <string-array name="employer_menu_title">
        <item>Schedule List</item>
        <item>Employer Add&amp;Edit</item>
        <item>Department Add&amp;Edit</item>
        <item>Status Add&amp;Edit</item>
    </string-array>
    <string-array name="employer_menu_description">
        <item>Schedule List</item>
        <item>Employer Add&amp;Edit</item>
        <item>Department Add&amp;Edit</item>
        <item>Status Add&amp;Edit</item>
    </string-array>
    <string-array name="inventory_menu_title">
        <item>Inventory</item>
        <item>Vendors item management</item>
        <item>Products with expired date</item>
    </string-array>
    <string-array name="inventory_menu_description">
        <item>Inventory control</item>
        <item>Interactions with vendors</item>
        <item>Products with expired date</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_apply_configuration">Auto apply configuration</string>
    <string name="matrix_option">Matrix Option</string>
    <string name="name">Name</string>
    <string name="active">Active</string>
    <string name="actions">Actions</string>
    <string name="vendors_creation_mode">Vendors Creation Mode</string>
    <string name="click_on_a_product_to_manage_it">Click on a Product to manage it</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="additional_notes_to_category">Additional notes to Category</string>
    <string name="product">Product</string>
    <string name="subcategory">SubCategory</string>
    <string name="creating_upsell_combos">Creating Upsell combos</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="combo">Combo</string>
    <string name="view">View</string>
    <string name="sku_barcode">SKU, Barcode</string>
    <string name="add_customer">Add Customer</string>
    <string-array name="first_configure_account_type">
        <item>Standart</item>
        <item>Non minus</item>
    </string-array>
    <string-array name="first_configure_account_circulation">
        <item>To till</item>
        <item>Bank Account</item>
    </string-array>
    <string name="clock_in">Clock in:</string>
    <string name="clock_out">Clock out:</string>
    <string name="till_opened_for">Till opened for:</string>
    <string-array name="unit_categories">
        <item>Piece</item>
        <item>Weight</item>
        <item>Length</item>
        <item>Area</item>
        <item>Volume</item>
    </string-array>
    <string-array name="weight_title">
        <item>Kilogram</item>
        <item>Gram</item>
        <item>Ton</item>
    </string-array>
    <string-array name="weight_abbr">
        <item>kg</item>
        <item>gr</item>
        <item>tn</item>
    </string-array>
    <string-array name="weight_factor">
        <item>1</item>
        <item>0.001</item>
        <item>1000</item>
    </string-array>
    <string-array name="length_title">
        <item>Meter</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Kilometer</item>
    </string-array>
    <string-array name="length_abbr">
        <item>m</item>
        <item>mm</item>
        <item>cm</item>
        <item>km</item>
    </string-array>
    <string-array name="length_factor">
        <item>1</item>
        <item>0.001</item>
        <item>0.01</item>
        <item>1000</item>
    </string-array>
    <string-array name="piece_title">
        <item>Piece</item>
    </string-array>
    <string-array name="piece_abbr">
        <item>pcs</item>
    </string-array>
    <string-array name="piece_factor">
        <item>1</item>
    </string-array>
    <string-array name="area_title">
        <item>M2</item>
        <item>Are</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>
    <string-array name="area_abbr">
        <item>m2</item>
        <item>a</item>
        <item>ac</item>
        <item>ha</item>
    </string-array>
    <string-array name="area_factor">
        <item>1</item>
        <item>100</item>
        <item>4046.85</item>
        <item>10000</item>
    </string-array>
    <string-array name="volume_title">
        <item>M3</item>
        <item>Liter</item>
        <item>Milliliter</item>
    </string-array>
    <string-array name="volume_abbr">
        <item>m3</item>
        <item>l</item>
        <item>ml</item>
    </string-array>
    <string-array name="volume_factor">
        <item>1</item>
        <item>0.001</item>
        <item>0.000001</item>
    </string-array>
    <string name="enter_pos_id">Enter POS ID</string>
    <string name="enter_alias">Enter company</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_repeat_password">Enter repeat password</string>
    <string name="enter_account_name">Enter account name</string>
    <string name="choose_least_one_currency">Please select at least one currency</string>
    <string name="choose_least_one_system_unit">Please choose at least one system unit</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="service_fee">Service Fee</string>
    <string name="discount">Discounts</string>
    <string name="account">Account</string>
    <string name="inclusions">Filters:</string>
    <string name="change">Change</string>
    <string name="apply">Apply</string>
    <string name="sold">Sold</string>
    <string name="received_from_vendor">Received from vendor</string>
    <string name="return_to_vendor">Return to vendor</string>
    <string name="return_from_customer">Return from customer</string>
    <string name="void_income">Replenishment</string>
    <string name="wasted">Wasted</string>
    <string name="consignment_canceled">Consignment canceled</string>
    <string name="held_product_return">Hold back product</string>
    <string name="canceled_order">Canceled order</string>
    <string name="currency">Currency</string>
    <string name="payment_to_order">Payment of order</string>
    <string name="pay_in">Pay in</string>
    <string name="pay_out">Pay out</string>
    <string name="bank_drop">Bank drop</string>
    <string name="debt_in">Debt</string>
    <string name="total_closed">Total closed</string>
    <string name="some_text">Some text</string>
    <string name="product_class_">Product Class</string>
    <string name="password">Password</string>
    <string name="company_name">Company Name</string>
    <string name="add_company">Add Company</string>
    <string name="add_company_photo">Add Company Photo</string>
    <string name="company_id">Company ID</string>
    <string name="ipcode">IPCODE</string>
    <string name="is_active">Is Active</string>
    <string name="clear">Clear</string>
</resources>