<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/three_hundred_dp"
    android:layout_height="@dimen/four_hundred_forty_dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/filter_frame"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inclusions"
        android:textSize="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:textColor="#212121"
        android:layout_marginBottom="@dimen/ten_dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#e4e4e4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <com.jim.mpviews.MpCheckbox
            android:id="@+id/chbPaymentToOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighteen_dp"
            android:layout_marginLeft="@dimen/eighteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            app:chb_type="2"
            app:checked="true"
            app:text="@string/payment_to_order" />
        <com.jim.mpviews.MpCheckbox
            android:id="@+id/chbChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighteen_dp"
            android:layout_marginLeft="@dimen/eighteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            app:chb_type="2"
            app:checked="true"
            app:text="@string/change" />
        <com.jim.mpviews.MpCheckbox
            android:id="@+id/chbPayIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighteen_dp"
            android:layout_marginLeft="@dimen/eighteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            app:chb_type="2"
            app:checked="true"
            app:text="@string/pay_in" />
        <com.jim.mpviews.MpCheckbox
            android:id="@+id/chbPayOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighteen_dp"
            android:layout_marginLeft="@dimen/eighteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            app:chb_type="2"
            app:checked="true"
            app:text="@string/pay_out" />
        <com.jim.mpviews.MpCheckbox
            android:id="@+id/chbPayToVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighteen_dp"
            android:layout_marginLeft="@dimen/eighteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            app:chb_type="2"
            app:checked="true"
            app:text="@string/pay_to_vendor" />
        <com.jim.mpviews.MpCheckbox
            android:id="@+id/chbBankDrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighteen_dp"
            android:layout_marginLeft="@dimen/eighteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            app:chb_type="2"
            app:checked="true"
            app:text="@string/bank_drop" />
        <com.jim.mpviews.MpCheckbox
            android:id="@+id/chbDebtIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eighteen_dp"
            android:layout_marginLeft="@dimen/eighteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            app:chb_type="2"
            app:checked="true"
            app:text="@string/debt_in" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#e4e4e4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <com.jim.mpviews.MpButton
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/hundred_twenty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="@string/cancel"
            android:layout_marginTop="@dimen/five_dp"
            android:textColor="#acacac"/>
        <com.jim.mpviews.MpButton
            android:id="@+id/btnApply"
            android:layout_width="@dimen/hundred_twenty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:text="@string/apply"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:textColor="#419fd9"/>
    </LinearLayout>


</LinearLayout>