<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:paddingLeft="@dimen/thirty_dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="@dimen/hundred_eighty_dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/sixteen_dp" />

        <TextView
            android:layout_width="@dimen/two_hundred_fifty_dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:paddingRight="@dimen/ten_dp"
            android:text="@string/total_closed"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/sixteen_dp" />

        <TextView
            android:layout_width="@dimen/seventy_dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/currency"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/sixteen_dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/thirty_dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/sixteen_dp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorTextHint" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCloseAmount"
        android:paddingTop="@dimen/twenty_dp"
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>